# Remitwise-Contracts

./: ACCESS_CONTROL_MATRIX.md  ARCHITECTURE.md  CHANGELOG_CONTRACTS.md  Cargo.toml  EVENTS.md  README.md  SC-015_CURRENCY_VALIDATION.md  SECURITY_REVIEW_SUMMARY.md  STORAGE_LAYOUT.md  THREAT_MODEL.md  TODO.md  check_errors.txt  commit_all.sh  fix_all_tests.js  fix_all_tests.py  fix_bill_tests.js  fix_bill_tests_v2.js  fix_bill_tests_v3.js  fix_bill_tests_v4.js  fix_bill_time.js  fix_large_amounts.js  fix_tests.py  gas_results.json  tests_output.txt  tree.txt
benchmarks/: README.md  baseline.json  thresholds.json
bill_payments/: Cargo.toml  OWNER_INDEX_DESIGN.md  README.md
data_migration/: README.md
docs/: family-wallet-design.md  multisig-proposal-expiry.md  storage-key-naming-conventions.md
emergency_killswitch/: THREAT_MODEL.md
family_wallet/: Cargo.toml
insurance/: Cargo.toml  README.md
insurance/src/: insurance_lib_from_main.rs.tmp  lib.rs  test.rs
insurance/test_snapshots/test/: test_create_policy_emits_event.1.json  test_create_policy_invalid_coverage.1.json  test_create_policy_invalid_premium.1.json  test_create_policy_negative_coverage_panics.1.json  test_create_policy_negative_premium_panics.1.json  test_deactivate_policy.1.json  test_execute_due_premium_schedules.1.json  test_get_active_policies.1.json  test_get_active_policies_excludes_inactive.1.json  test_get_active_policies_multi_owner_isolation.1.json  test_get_active_policies_multiple_pages.1.json  test_get_active_policies_single_page.1.json  test_get_all_policies_for_owner_includes_inactive.1.json  test_get_total_monthly_premium_different_owner_isolation.1.json  test_get_total_monthly_premium_multiple_active_policies.1.json  test_get_total_monthly_premium_one_policy.1.json  test_get_total_monthly_premium_zero_policies.1.json  test_instance_ttl_extended_on_create_policy.1.json  test_instance_ttl_extended_on_deactivate_policy.1.json  test_instance_ttl_refreshed_on_pay_premium.1.json  test_limit_clamped_to_max.1.json  test_limit_zero_uses_default.1.json  test_multiple_premium_payments.1.json  test_pay_premium.1.json  test_pay_premium_after_deactivate.1.json  test_pay_premium_emits_event.1.json  test_pay_premium_policy_not_found.1.json  test_pay_premium_success.1.json  test_pay_premium_unauthorized.1.json  test_policy_data_persists_across_ledger_advancements.1.json  test_policy_lifecycle_emits_all_events.1.json
insurance/tests/: caps_and_stats_tests.rs  gas_bench.rs  stress_tests.rs
integration_tests/: Cargo.toml  README.md
integration_tests/test_snapshots/: test_multi_contract_user_flow.1.json  test_multiple_entities_creation.1.json  test_split_with_rounding.1.json
integration_tests/tests/: multi_contract_integration.rs
(+979 files in other folders)
