[package]
name = "remitwise-contracts"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "remittance_split",
    "savings_goals",
    "data_migration",
    "orchestrator",
    "cli",
    "scenarios",
    "remitwise-common",
    "testutils",
    "integration_tests",
]
default-members = [
    "remittance_split",
    "savings_goals",
    "data_migration",
    "orchestrator",
]
resolver = "2"

[dependencies]
soroban-sdk = "21.7.0"
soroban-sdk = "21.0.0"
ed25519-dalek = "2.1.1"
remittance_split = { path = "./remittance_split" }
savings_goals = { path = "./savings_goals" }
orchestrator = { path = "./orchestrator" }
# bill_payments, insurance, family_wallet, reporting excluded: depend on remitwise-common (sdk v20)

[dev-dependencies]
soroban-sdk = { version = "21.7.0", features = ["testutils"] }
[patch.crates-io]
soroban-sdk = { version = "=21.7.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
