[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "=21.7.7"
remittance_split = { path = "../remittance_split" }
savings_goals = { path = "../savings_goals" }
bill_payments = { path = "../bill_payments" }
insurance = { path = "../insurance" }
remitwise-common = { path = "../remitwise-common" }

[dev-dependencies]
soroban-sdk = { version = "=21.7.7", features = ["testutils"] }
